--- a/app/src/main/res/layout/fragment_guest_menu_detail.xml
+++ b/app/src/main/res/layout/fragment_guest_menu_detail.xml
@@ -8,7 +8,7 @@
     android:fillViewport="true"
     android:background="@color/app_background_light_green"
         android:padding="24dp"
-        tools:context=".ui.main.fragments.MenuDetailFragment">
+        tools:context=".ui.main.fragments.GuestMenuDetailFragment">
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/imageCard"
