--- a/app/src/main/res/navigation/guest_nav_graph.xml
+++ b/app/src/main/res/navigation/guest_nav_graph.xml
@@ -13,7 +13,7 @@
     <!-- Destination for the "Menu" tab -->
     <fragment
         android:id="@+id/navigation_menu"
-        android:name="com.example.se2_restaurant_management_application.ui.main.fragments.MenuFragment"
+        android:name="com.example.se2_restaurant_management_application.ui.main.fragments.GuestMenuFragment"
         android:label="Menu"
         tools:layout="@layout/fragment_guest_menu">
         <action
@@ -26,14 +26,14 @@
 
     <fragment
         android:id="@+id/navigation_menu_detail"
-        android:name="com.example.se2_restaurant_management_application.ui.main.fragments.MenuDetailFragment"
+        android:name="com.example.se2_restaurant_management_application.ui.main.fragments.GuestMenuDetailFragment"
         android:label="Menu Details"
         tools:layout="@layout/fragment_guest_menu_detail" />
 
     <!-- Destination for the "Reservations" tab -->
     <fragment
         android:id="@+id/navigation_reservations"
-        android:name="com.example.se2_restaurant_management_application.ui.main.fragments.ReservationsFragment"
+        android:name="com.example.se2_restaurant_management_application.ui.main.fragments.GuestReservationsFragment"
         android:label="Reservations"
         tools:layout="@layout/fragment_guest_reservation">
         <action
@@ -72,7 +72,7 @@
     <!-- Destination for the Reservation status screen -->
     <fragment
         android:id="@+id/reservationStatusFragment"
-        android:name="com.example.se2_restaurant_management_application.ui.main.fragments.ReservationStatusFragment"
+        android:name="com.example.se2_restaurant_management_application.ui.main.fragments.GuestReservationStatusFragment"
         android:label="Reservation Status"
         tools:layout="@layout/fragment_guest_reservation_status">
         <action
@@ -86,7 +86,7 @@
     <!-- Destination for the "Account" tab -->
     <fragment
         android:id="@+id/navigation_account"
-        android:name="com.example.se2_restaurant_management_application.ui.main.fragments.AccountFragment"
+        android:name="com.example.se2_restaurant_management_application.ui.main.fragments.GuestAccountFragment"
         android:label="Account"
         tools:layout="@layout/fragment_guest_account">
         <action
