--- a/app/src/main/res/layout-land/fragment_staff_reservation_status.xml
+++ b/app/src/main/res/layout-land/fragment_staff_reservation_status.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/app_background_light_green"
-    tools:context=".ui.main.fragments.StaffReservationStatusFragment">
+    tools:context=".ui.main.staff.StaffReservationStatusFragment">
 
     <!-- Header -->
     <ImageButton
