--- a/app/src/main/res/layout-sw600dp-land/fragment_guest_reservation_status.xml
+++ b/app/src/main/res/layout-sw600dp-land/fragment_guest_reservation_status.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/app_background_light_green"
     android:padding="24dp"
-    tools:context=".ui.main.fragments.GuestReservationStatusFragment">
+    tools:context=".ui.main.guest.GuestReservationStatusFragment">
 
 
     <ImageButton
