--- a/app/src/main/res/layout-sw600dp/fragment_notification.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_notification.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/app_background_light_green"
     android:padding="24dp"
-    tools:context=".ui.main.fragments.StaffNotificationsFragment">
+    tools:context=".ui.main.staff.StaffNotificationsFragment">
 
     <!-- Header -->
     <ImageButton
