--- a/app/src/main/res/layout-sw600dp/fragment_staff_menu_detail.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_staff_menu_detail.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="24dp"
-        tools:context=".ui.main.fragments.StaffMenuDetailFragment">
+        tools:context=".ui.main.staff.StaffMenuDetailFragment">
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/imageCard"
